--- a/README
+++ b/README
@@ -32,7 +32,7 @@ here!) is
 If CALCLENS is used for any scientific work, I ask that you please
 cite the paper describing the code 
 
-    Becker 2012, arXiv:####.#### [astro-ph.CO]
+    Becker 2012, arXiv:1210.3069 [astro-ph.CO]
 
 and also post your own work (and any updates) to the arXiv
 (http://arxiv.org/). I also ask that you notify me of any bugs once
