--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@
 Changes
 /////////////////////////////////////////////
 
+v0.9b - Added TreePM (broken) and direct summation (broken) options. Fixed bug in domain 
+        decomp. - April 2013
+
 v0.9a - fixed bug which outputs the zero-th component of the deflection 
         angle twice - found by Wei Chengliang in binary ray output - January 2013
 v0.9 - original release - October 2012
