removed treePM options

--- a/CHANGES
+++ b/CHANGES
@@ -2,10 +2,14 @@
 Changes
 /////////////////////////////////////////////
 
+v0.9c - Removed	TreePM and direct summation options. Added ability to use precomputed
+        lensing planes. 
+
 v0.9b - Added TreePM (broken) and direct summation (broken) options. Fixed bug in domain 
         decomp. - April 2013
 
 v0.9a - fixed bug which outputs the zero-th component of the deflection 
         angle twice - found by Wei Chengliang in binary ray output - January 2013
+
 v0.9 - original release - October 2012
 
